feat: add modal windows and style css

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,12 @@
 @import 'style/_search';
 @import 'style/_services';
 @import 'style/_service';
+@import 'style/_stars';
 @import 'style/_category';
 @import 'style/_footer';
 @import 'style/_modal';
+@import 'style/_person';
+@import 'style/_about';
+@import 'style/_review';
+@import 'style/_form';
+@import 'style/_avatar';
