--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -1,3 +1,56 @@
 .modal {
   display: none;
+  position: fixed;
+  inset: 0;
+  padding: 40px;
+  overflow-y: auto;
+  cursor: pointer;
+  background-color: rgba(#000, .6);
+
+  &__title {
+    text-align: center;
+    margin-bottom: 24px;
+    font-weight: 400;
+    font-size: 24px;
+  }
+
+  &_sign-up {
+    display: flex;
+  }
+
+  &__body {
+    position: relative;
+    margin: auto;
+    max-width: 768px;
+    width: 100%;
+    cursor: default;
+    background-color: #F2F5FC;
+    border-radius: 12px;
+    padding: 24px 20px 48px;
+  }
+
+  &__container {
+    max-width: 632px;
+    margin: 0 auto;
+  }
+
+  &__close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    transform: translate(50%, -50%);
+    background-color: #FFFFFF;
+    color: #7b7b7b;
+    border-radius: 50%;
+    line-height: 0;
+    transition: color .2s ease-in-out;
+    border:none;
+
+      &:hover {
+        color: #E5C207;
+      }
+  }
 }
+
