--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -14,7 +14,7 @@ body {
   color: $text;
 }
 
-h1, h2,h3, h4, p, ul, fieldset {
+h1, h2,h3, h4, p, ul {
   margin: 0;
 }
 
@@ -26,6 +26,12 @@ ul {
 a {
   text-decoration: none;
   color: inherit;
+}
+
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
 }
 
 button {
