--- a/src/style/_avatar.scss
+++ b/src/style/_avatar.scss
@@ -4,6 +4,8 @@
     display: flex;
     gap: 11px;
     cursor: pointer;
+    align-items: center;
+    flex-wrap: wrap;
 
     &:hover {
       color: #096601;
@@ -11,12 +13,25 @@
       .avatar__input-text {
         background-color: #daffd7;
         color:$text;
+
+        @include max-width(540px) {
+          font-size: 14px;
+        }
       }
+    }
+    @include max-width(540px) {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 16px;
     }
   }
 
   &__text {
     font-weight: 300;
+
+    @include max-width(540px) {
+      font-size: 14px;
+    }
   }
 
   &__input-wrapper {
@@ -34,6 +49,7 @@
   }
 
   &__input-text {
+    display: inline-block;
     padding: 10px 20px;
     border: 1px solid #12DF00;
     border-radius: 4px;
