--- a/src/style/_category.scss
+++ b/src/style/_category.scss
@@ -5,7 +5,15 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    margin-bottom: 24px;
+    width: 180px;
+  }
+
+  &__list {
+    padding-top: 24px;
+
+    @include max-width(768px) {
+      display: none;
+    }
   }
 
   &__item {
