--- a/src/style/_form.scss
+++ b/src/style/_form.scss
@@ -5,6 +5,10 @@
     flex-wrap: wrap;
     gap: 16px 12px;
 
+    @include max-width(540px) {
+      gap: 8px;
+    }
+
     &_user, &_service {
       margin-bottom: 46px;
     }
@@ -23,6 +27,10 @@
 
   &__label {
     flex:1 1 310px;
+
+    @include max-width(540px) {
+      font-size: 14px;
+    }
   }
 
   &__text {
@@ -39,6 +47,10 @@
     border: none;
     padding: 10px 14px;
     font-weight: 300;
+
+    @include max-width(540px) {
+      font-size: 14px;
+    }
   }
 
   &__select {
@@ -49,13 +61,16 @@
     border: none;
     padding: 10px 14px;
   }
+
   &__select_price {
     width: 105px;
   }
+
   &__wrapper-price {
     display: flex;
     gap: 5px;
   }
+
   &__textarea {
     width: 100%;
     height: 46px;
@@ -65,6 +80,7 @@
     padding: 10px 14px;
     font-weight: 300;
     min-height: 80px;
+    resize: vertical;
   }
 
   &__password {
@@ -93,11 +109,25 @@
     display: flex;
     justify-content: space-between;
 
+    @include max-width(540px) {
+      flex-direction: column;
+      gap: 32px;
+    }
+
     &_review {
       min-height: auto;
       justify-content: end;
       align-items: center;
-      gap: 24px;
+      gap: 16px 24px;
+
+      @include max-width(540px) {
+        flex-direction: column;
+        align-items: end;
+
+        .rating {
+          order: 1;
+        }
+      }
     }
   }
 
@@ -106,6 +136,10 @@
     padding: 10px 20px;
     background-color: #ffd600;
     border-radius: 4px;
+
+    @include max-width(540px) {
+      font-size: 14px;
+    }
 
     &_sign-up {
       align-self: flex-end;
