--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -5,19 +5,40 @@
   &__container {
     display: flex;
     align-items: center;
+    gap: 20px 30px;
+
+    @include max-width(768px) {
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
   }
 
   &__logo {
-    margin-right: 88px;
+    margin-right: 58px;
+
+    @include max-width(1024px) {
+      margin-right: 38px;
+    }
+
+    @include max-width(768px) {
+      margin-right: 0;
+    }
   }
 
   &__search {
     margin-right: auto;
+    @include max-width(768px) {
+      order: 1;
+    }
   }
 
   &__auth {
     display: flex;
     gap: 40px;
+
+    @include max-width(1024px) {
+      gap: 30px;
+    }
   }
 
   &__auth-btn {
@@ -32,6 +53,11 @@
 
     &:active {
       color: #e5c207;
+    }
+
+    @include max-width(520px) {
+      font-size: 0;
+      gap: 0;
     }
   }
 }
