--- a/src/style/_modal.scss
+++ b/src/style/_modal.scss
@@ -7,14 +7,26 @@
   cursor: pointer;
   background-color: rgba(#000, .6);
 
+  @include max-width(768px) {
+    padding: 20px;
+  }
+
+  @include max-width(360px) {
+    padding: 0;
+  }
+
   &__title {
     text-align: center;
     margin-bottom: 24px;
     font-weight: 400;
     font-size: 24px;
+
+    @include max-width(540px) {
+      font-size: 18px;
+    }
   }
 
-  &_sign-up {
+  &_sign-in {
     display: flex;
   }
 
@@ -27,6 +39,10 @@
     background-color: #F2F5FC;
     border-radius: 12px;
     padding: 24px 20px 48px;
+
+    @include max-width(540px) {
+      padding: 20px 20px;
+    }
   }
 
   &__container {
@@ -47,10 +63,16 @@
     line-height: 0;
     transition: color .2s ease-in-out;
     border:none;
+    z-index: 10;
 
       &:hover {
         color: #E5C207;
       }
+
+    @include max-width(360px) {
+      transform: none;
+      box-shadow: 0 0 10px 5px #ccc;
+    }
   }
 }
 
