--- a/src/style/_review.scss
+++ b/src/style/_review.scss
@@ -3,11 +3,19 @@
     font-weight: 400;
     font-size: 24px;
     margin-bottom: 16px;
+
+    @include max-width(540px) {
+      font-size: 16px;
+    }
   }
 
   &__name {
     font-size: 16px;
     font-weight: 400;
+
+    @include max-width(540px) {
+      font-size: 14px;
+    }
   }
 
   &__list {
@@ -15,6 +23,10 @@
     flex-direction: column;
     gap:10px;
     margin-bottom: 16px;
+
+    @include max-width(540px) {
+      margin-bottom: 8px;
+    }
   }
 
   &__item {
@@ -41,6 +53,10 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     height: calc(19px *2);
+
+    @include max-width(540px) {
+      font-size: 14px;
+    }
 
     &_open{
       display: block;
