--- a/src/style/_services.scss
+++ b/src/style/_services.scss
@@ -1,13 +1,17 @@
 .services {
   padding: 25px 0;
 
-  &__container {
-    display: flex;
-    gap: 20px;
+  @include max-width(768px) {
+    padding-top: 5px;
   }
 
-  &__category {
-    flex: 0 0 180px;
+  &__container {
+    display: flex;
+    gap: 30px 20px;
+
+    @include max-width(768px) {
+      flex-direction: column;
+    }
   }
 
   &__list {
