--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -58,8 +58,19 @@ img {
 }
 
 .container {
-  max-width: 1180px;
-  padding: 20px;
+  max-width: 1220px;
+  padding: 0 20px;
   margin: 0 auto;
+
+  @include max-width(1024px) {
+      max-width: 820px;
+  }
+  @include max-width(768px) {
+      max-width: 620px;
+  }
+  @include max-width(520px) {
+      max-width: 100%;
+  }
 }
+
 
